# Arxiv-Search

./: .gitignore  README.md  pyproject.toml
arxiv_search/: __init__.py  arxiv.py  arxiv_categories.json  arxiv_domains.json  citations.py  spinner.py
arxiv_search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
