[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-search"
version = "0.1.0"
description = "A better tool to search for research papers"
readme = "README.md"
requires-python = ">=3.11.4"
dependencies = [
    "click>=8.2.1",
    "requests>=2.32.5",
]


[project.scripts]
arxiv-search = "arxiv_search:main"
categories = "arxiv_search:categories"
domains = "arxiv_search:domains"
